--- a/debian/debian/ix-postinit.service
+++ b/debian/debian/ix-postinit.service
@@ -6,7 +6,7 @@ After=multi-user.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=midclt call core.notify_postinit
+ExecStartPre=-midclt call core.notify_postinit
 ExecStart=midclt call -job initshutdownscript.execute_init_tasks POSTINIT
 StandardOutput=null
 StandardError=null
