--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -131,6 +131,7 @@ Depends: alembic,
          python3-certbot-dns-ovh,
          python3-croniter,
          python3-crypto,
+         python3-dbus,
          python3-dnspython,
          python3-fenced,
          python3-flask,
