--- a/src/freenas/debian/rules
+++ b/src/freenas/debian/rules
@@ -22,6 +22,7 @@ override_dh_auto_install:
 		cp etc/iso_3166_2_countries.csv debian/truenas-files/etc/; \
 		cp -a etc/logrotate.d debian/truenas-files/etc/; \
 		cp etc/netcli debian/truenas-files/etc/; \
+		cp etc/nsswitch.conf debian/truenas-files/etc/; \
 		cp -a etc/syslog-ng debian/truenas-files/etc/; \
 		cp -a etc/systemd debian/truenas-files/etc/; \
 		cp -a usr/lib/systemd debian/truenas-files/usr/lib/; \
