Prevent non-existent guest user from being added to SMB config

--- a/src/middlewared/middlewared/etc_files/local/smb4.conf
+++ b/src/middlewared/middlewared/etc_files/local/smb4.conf
@@ -148,7 +148,12 @@
                 pc.update({'server min protocol': 'SMB2_02'})
                 pc.update({'unix extensions': 'No'})
             if db['cifs']['guest'] != "nobody":
-                pc.update({'guest account': db['cifs']['guest']})
+                try:
+                    middleware.call_sync("user.get_user_obj", {"username": db['cifs']['guest']})
+                    pc.update({'guest account': db['cifs']['guest']})
+                except KeyError:
+                    logger.warning("SMB guest user [%s] does not exist. Defaulting to [nobody].", db['cifs']['guest'])
+                    pass
             if db['guest_enabled']:
                 pc.update({'map to guest': 'Bad User'})
             else:
