--- a/src/freenas/debian/rules
+++ b/src/freenas/debian/rules
@@ -21,13 +21,13 @@ override_dh_auto_install:
 		cp -a etc/grub.d debian/truenas-files/etc/; \
 		cp etc/iso_3166_2_countries.csv debian/truenas-files/etc/; \
 		cp -a etc/logrotate.d debian/truenas-files/etc/; \
-		cp -a etc/modules debian/truenas-files/etc/; \
 		cp etc/netcli debian/truenas-files/etc/; \
 		cp etc/nsswitch.conf debian/truenas-files/etc/; \
 		cp -a etc/syslog-ng debian/truenas-files/etc/; \
 		cp -a etc/systemd debian/truenas-files/etc/; \
 		cp -a root debian/truenas-files/; \
 		cp -a usr/lib/systemd debian/truenas-files/usr/lib/; \
+		cp -a usr/lib/modules-load.d debian/truenas-files/usr/lib/; \
 		mkdir -p debian/truenas-files/conf/base/etc; \
 	"
 
