NAS-112619 / 12.0 / Fix groupmap synchronization (#7617)
* Fix groupmap synchronization

Due to API changes, we now need full idmap config in passive
controller smb4.conf file. We also need to ensure that
RID counter for passdb and groupmap operations is same.

* Create winbindd_idmap.tdb if it doesn't exist

--- a/src/middlewared/middlewared/etc_files/local/smb4.conf
+++ b/src/middlewared/middlewared/etc_files/local/smb4.conf
@@ -418,6 +418,7 @@
                     'netbios name': f"{db['gc']['hostname_virtual']}_STANDBY",
                     'logging': 'file'
                 }
+                add_idmap_params(stub_config, db)
                 return stub_config
 
             add_general_params(pc, db)
