--- a/src/middlewared/middlewared/alembic.ini
+++ b/src/middlewared/middlewared/alembic.ini
@@ -29,7 +29,7 @@ timezone = UTC
 # version location specification; this defaults
 # to alembic/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path
-version_locations = alembic/versions/21.MM alembic/versions/12.0
+version_locations = alembic/versions/22.02 alembic/versions/12.0
 
 # the output encoding used when revision files
 # are written from script.py.mako
