Refuse to generate avahi config on passive controller

--- a/src/middlewared/middlewared/etc_files/local/avahi/avahi-daemon.conf
+++ b/src/middlewared/middlewared/etc_files/local/avahi/avahi-daemon.conf
@@ -19,6 +19,9 @@
     ipv6_enabled = any(middleware.call_sync('interface.ip_in_use', {'ipv4': False, 'ipv6': True}))
 
     failover_int = middleware.call_sync("failover.internal_interfaces")
+    failover_status = middleware.call_sync('failover.status')
+    if failover_status not in ['SINGLE', 'MASTER']:
+        raise FileShouldNotExist()
 %>
 
 [server]
