Add proftpd-mod-crypto as depedency for scale
This commit adds changes to have proftpd-mod-crypto as a dependency for scale as modules required for TLS are not available in proftpd package and this package provides the relevant modules for TLS with proftpd to function.

--- a/debian/debian/control
+++ b/debian/debian/control
@@ -37,6 +37,7 @@ Depends: acl,
          openssh-server,
          openvpn,
          proftpd,
+         proftpd-mod-crypto,
          python3-midcli,
          truenas-samba,
          snmpd,
