Allow booting TrueNAS CORE from GRUB menu
Currently we only allow booting back to TrueNAS core if user activates its boot environment
using WebUI. We do so because BSD loader can only be executed from an active BE. This makes
it impossible to roll back to CORE if SCALE upgrade fails (e.g. bad database migration) to
the point it makes it unbootable.

Our workaround is to pass SCALE boot process a special environment variable; then, the most
early systemd unit will activate CORE BE, update GRUB and reboot once again. Thus, all
the prerequisites would be complied and FreeBSD boot process should go normally.

--- a/debian/debian/rules
+++ b/debian/debian/rules
@@ -9,6 +9,7 @@ override_dh_auto_install:
 	cp -aR data etc debian/truenas/
 
 override_dh_installsystemd:
+	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-boot-core
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-conf
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-etc
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-netif
