--- a/.gitignore
+++ b/.gitignore
@@ -13,26 +13,12 @@ __pycache__
 .DS_Store
 .idea/
 .vscode/
-/docs/api/_build/
-/docs/userguide/_build/
-/gui/local_settings.py
-gui/static/
-/FreeBSD/
-/filtered-patches/
-/os-base/
-/pbi/
-/sbin/
-src/middlewared/build/
-src/middlewared/dist/
-src/middlewared/middlewared.egg-info/
-.git-repo-setting
-nas_source/
-webui/node_modules/
-webui/dll/
-webui/dist/
-npm-debug.log
-tests/artifacts/
-tests/test-report.txt
-tests/test-report.xml
-tests/testfile.txt
+/docs/build/
+/src/middlewared/build/
+/src/middlewared/dist/
+/src/middlewared/middlewared.egg-info/
+/tests/artifacts/
+/tests/test-report.txt
+/tests/test-report.xml
+/tests/testfile.txt
 /tests/config.cfg
