Fix nsswitch generation

--- a/src/middlewared/middlewared/etc_files/nsswitch.conf
+++ b/src/middlewared/middlewared/etc_files/nsswitch.conf
@@ -3,7 +3,7 @@
 # $FreeBSD$
 #
 <%
-        ds_state = safe_call('directoryservices.get_state')
+        ds_state = middleware.call_sync('directoryservices.get_state')
         ad_enabled = ds_state['activedirectory'] != 'DISABLED'
         ldap_enabled = ds_state['ldap'] != 'DISABLED'
         nis_state = ds_state['nis']
