Disable multichannel support in 4.15 by default

--- a/src/middlewared/middlewared/etc_files/local/smb4.conf
+++ b/src/middlewared/middlewared/etc_files/local/smb4.conf
@@ -123,6 +123,7 @@
                 'dos filemode': 'Yes',
                 'kernel change notify': 'No',
                 'directory name cache size': '0',
+                'server multi channel support': 'No',
                 'nsupdate command': '/usr/local/bin/samba-nsupdate -g',
                 'unix charset': db['cifs']['unixcharset'],
                 'log level': f"{db['loglevel']} auth_json_audit:3@/var/log/samba4/auth_audit.log",
