--- a/debian/debian/control
+++ b/debian/debian/control
@@ -34,6 +34,8 @@ Depends: acl,
          nfs-ganesha-gluster,
          nfs-ganesha-vfs,
          nginx,
+         nut,
+         nut-snmp,
          openssh-server,
          openvpn,
          proftpd,
