--- a/src/middlewared/middlewared/etc_files/local/proftpd.conf
+++ b/src/middlewared/middlewared/etc_files/local/proftpd.conf
@@ -22,7 +22,7 @@ DisplayLogin /var/run/proftpd/proftpd.motd
 DeferWelcome off
 TimeoutIdle ${ftp['timeout']}
 TimeoutLogin 300
-TimeoutNoTransfer ${ftp['timeout_notransfer']}
+TimeoutNoTransfer 300
 TimeoutStalled 3600
 MaxInstances none
 % if ftp['clients']:
