ftp: `LoadModule mod_ident.c` when ident lookups are on

--- a/src/middlewared/middlewared/etc_files/local/proftpd.conf
+++ b/src/middlewared/middlewared/etc_files/local/proftpd.conf
@@ -39,7 +39,10 @@ AllowForeignAddress ${'on' if ftp['fxp'] else 'off'}
 % if ftp['masqaddress']:
     MasqueradeAddress ${ftp['masqaddress']}
 % endif
-IdentLookups ${'on' if ftp['ident'] else 'off'}
+% if ftp['ident']:
+    LoadModule mod_ident.c
+    IdentLookups on
+% endif
 UseReverseDNS ${'on' if ftp['reversedns'] else 'off'}
 % if ftp['passiveportsmin']:
     PassivePorts  ${ftp['passiveportsmin']} ${ftp['passiveportsmax']}
