--- a/debian/debian/rules
+++ b/debian/debian/rules
@@ -18,6 +18,7 @@ override_dh_installsystemd:
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-shutdown
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-ssh-keys
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-syncdisks
+	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-swap
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-update
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-zfs
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=snmp-agent
