Update debug for nfs-kernel-server

--- a/debian/debian/control
+++ b/debian/debian/control
@@ -29,10 +29,9 @@ Depends: acl,
          mc,
          middlewared,
          minio,
+         nfs-common,
+         nfs-kernel-server,
          net-tools,
-         nfs-ganesha,
-         nfs-ganesha-gluster,
-         nfs-ganesha-vfs,
          nginx,
          nut,
          nut-snmp,
