--- a/debian/debian/rules
+++ b/debian/debian/rules
@@ -12,6 +12,7 @@ override_dh_installsystemd:
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-boot-core
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-conf
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-etc
+	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-freebsd-to-scale-update
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-netif
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-postinit
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=ix-preinit
