switch to using mpm_event from mpm_prefork (#8432)
Convert to using the default mpm for webdav. mpm_prefork was
crashing on a NULL dereference and is most likely not a great
choice for our purposes..

Since this change means that apache server is no longer setuid,
ensure that apache is running as webdav rather than www-data
so that users don't lose access to files written by webdav.

--- a/src/middlewared/middlewared/etc_files/local/apache24/Includes/webdav.conf
+++ b/src/middlewared/middlewared/etc_files/local/apache24/Includes/webdav.conf
@@ -11,9 +11,7 @@
 
 	# Check to see if there is a webdav lock databse directory, if not create
 	# one. Take care of necessary permissions whilst creating it!
-	apache_dir = service.APACHE_DIR
-	if osc.IS_LINUX:
-		apache_dir = apache_dir.replace('local/', '')
+	apache_dir = 'local/apache24'
 	oscmd = f'/etc/{apache_dir}/var'
 	if not os.path.isdir(oscmd):
 		os.mkdir(oscmd, 0o774)
@@ -64,7 +62,6 @@
 Listen ${webdav_config['tcpport']}
 	<VirtualHost *:${webdav_config['tcpport']}>
 		DavLockDB "/etc/${apache_dir}/var/DavLock"
-		AssignUserId webdav webdav
 
 		<Directory />
 % if auth_type != 'none':
