Improve webdav validation and disable deprecated TLS versions
Remove support for TLSv1, TLSv1.1 and add support for TLSv1.3
Add webdav.cert_choices method

--- a/src/middlewared/middlewared/etc_files/local/apache24/httpd.conf
+++ b/src/middlewared/middlewared/etc_files/local/apache24/httpd.conf
@@ -122,7 +122,7 @@ LogLevel warn
 <IfModule ssl_module>
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLProtocol +TLSv1 +TLSv1.1 +TLSv1.2
+SSLProtocol +TLSv1.2 +TLSv1.3
 </IfModule>
 
 Include etc/apache24/Includes/*.conf
