Convert webdav etc group to use render_ctx
Apart from having shared context (which is probably of negligable
benefit here). This also makes several changes to how webdav
config files are generated.

We now always ensure that password hashes are owned by webdav user and
permissions are 0o600 and use secrets.choice() rather than
random.choice() for generating hashes. A subprocess call to change
owner has also been replaced with shutil.chown(). Futher investigation
may be required in order to determine whether this chown call is
actually needed.

--- a/src/middlewared/middlewared/etc_files/local/apache24/Includes/webdav.conf
+++ b/src/middlewared/middlewared/etc_files/local/apache24/Includes/webdav.conf
@@ -1,63 +1,26 @@
 <%
-	import crypt
-	import hashlib
-	import itertools
-	import os
-	import random
-	import subprocess
+    import os
+    import shutil
+    import stat
 
-	from string import digits, ascii_uppercase, ascii_lowercase
-	from middlewared.utils import osc
+    from contextlib import suppress
+    from middlewared.plugins.etc import EtcUSR, EtcGRP
 
-	# Check to see if there is a webdav lock databse directory, if not create
-	# one. Take care of necessary permissions whilst creating it!
-	apache_dir = 'local/apache24'
-	oscmd = f'/etc/{apache_dir}/var'
-	if not os.path.isdir(oscmd):
-		os.mkdir(oscmd, 0o774)
+    # Check to see if there is a webdav lock database directory, if not create
+    # one. Take care of necessary permissions whilst creating it!
+    apache_dir = 'local/apache24'
+    oscmd = f'/etc/{apache_dir}/var'
+    with suppress(FileExistsError):
+        os.mkdir(oscmd, 0o774)
 
-	try:
-		uid = middleware.call_sync('user.get_user_obj', {'username': 'webdav'})['pw_uid']
-		gid = middleware.call_sync('group.get_group_obj', {'groupname': 'webdav'})['gr_gid']
-	except Exception:
-		uid = 0
-		gid = 0
+    if stat.S_IMODE(os.stat(oscmd).st_mode) != 0o774:
+        os.chmod(oscmd, 0o774)
 
-	subprocess.run(['chown', '-Rx', f'{uid}:{gid}', oscmd], check=False)
+    shutil.chown(oscmd, user=EtcUSR.WEBDAV, group=EtcUSR.WEBDAV)
 
-	webdav_config = middleware.call_sync('webdav.config')
-	auth_type = webdav_config['htauth'].lower()
-	web_shares = middleware.call_sync('sharing.webdav.query', [['enabled', '=', True]])
-	password = webdav_config["password"]
-
-	# Generating relevant password files
-
-	def salt():
-		"""
-		Returns a string of 2 random letters.
-		Taken from Eli Carter's htpasswd.py
-		"""
-		letters = f'{ascii_lowercase}{ascii_uppercase}{digits}/.'
-		return '$6${0}'.format(''.join([random.choice(letters) for i in range(16)]))
-
-	if auth_type == 'none':
-		path = None
-	elif auth_type == 'basic':
-		path = f'/etc/{apache_dir}/webdavhtbasic'
-		with open(path, 'w+') as f:
-			f.write(f'webdav:{crypt.crypt(password, salt())}')
-	elif auth_type == 'digest':
-		path = f'/etc/{apache_dir}/webdavhtdigest'
-		with open(path, 'w+') as f:
-			f.write(
-				"webdav:webdav:{0}".format(hashlib.md5(f"webdav:webdav:{password}".encode()).hexdigest())
-			)
-	else:
-		raise ValueError("Invalid auth_type (must be one of 'none', 'basic', 'digest')")
-
-	if path:
-		os.chown(path, uid, gid)
-
+    webdav_config = render_ctx['webdav.config']
+    auth_type = webdav_config['htauth'].lower()
+    web_shares = render_ctx['sharing.webdav.query']
 %>\
 Listen ${webdav_config['tcpport']}
 	<VirtualHost *:${webdav_config['tcpport']}>
