Add haproxy as a dep

--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -90,6 +90,7 @@ Depends: alembic,
          ethtool,
          gawk,
          gdisk,
+         haproxy,
          hdparm,
          iscsi-scst,
          ipmitool,
