--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -26,6 +26,7 @@ Build-Depends: alembic,
                python3-croniter,
                python3-dbus,
                python3-dnspython,
+               python3-docker,
                python3-fastentrypoints,
                python3-fenced,
                python3-flask,
@@ -130,6 +131,7 @@ Depends: alembic,
          python3-croniter,
          python3-dbus,
          python3-dnspython,
+         python3-docker,
          python3-fenced,
          python3-flask,
          python3-glustercli,
