start ix-etc.service before systemd-modules-load.service
(cherry picked from commit e5730716022fca660f8d6de9740c0f1a9c7d4720)

--- a/debian/debian/ix-etc.service
+++ b/debian/debian/ix-etc.service
@@ -5,7 +5,7 @@ DefaultDependencies=no
 Before=network-pre.target
 
 After=middlewared.service
-Before=local-fs.target
+Before=local-fs.target systemd-modules-load.service
 
 [Service]
 Type=oneshot
