ix-netif needs to run after systemd-modules-load
(cherry picked from commit 3d710c9efff3c2a5b5cce1374a7c33dc4cb91739)

--- a/debian/debian/ix-netif.service
+++ b/debian/debian/ix-netif.service
@@ -4,7 +4,7 @@ DefaultDependencies=no
 
 Before=network-pre.target
 
-After=middlewared.service
+After=middlewared.service systemd-modules-load.service
 Before=local-fs.target
 Conflicts=systemd-networkd.service
 
